--- a/src/pages/map.astro
+++ b/src/pages/map.astro
@@ -1,7 +1,10 @@
 ---
 import MainLayout from "../layouts/MainLayout.astro";
+import MapImg from "../components/MapImg.astro";
+import "../styles/global.css";
 ---
 
 <MainLayout>
   <h1>Map</h1>
+  <MapImg />
 </MainLayout>
