list view og lineup

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -2,6 +2,6 @@
   <ul>
     <li><a href="/lineup">Line up</a></li>
     <li><a href="/map">Map</a></li>
-    <li><a href="/ticket">Buy Ticket</a></li>
+    <li><a href="/single">Single view</a></li>
   </ul>
 </nav>
