--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -10,6 +10,12 @@ import Navigation from "../components/Navigation.astro";
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <title>Astro</title>
+
+    <style>
+      body {
+        background-image: url(../images/background.webp);
+      }
+    </style>
   </head>
   <body>
     <Navigation />
