index + footer +header_ lavet af Laura

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -6,26 +6,26 @@
     <div class="info_links">
     <p> OM OS </p>
     <a href=""> Om Distortion</a>
-     <a href=""> Om Distortion</a>
-      <a href=""> Om Distortion</a>
+     <a href=""> Samarbejdspartnere</a>
+      <a href=""> Praktisk information</a>
       </div>
 
        <div class="info_links">
     <p> DISTORTION GRUPPE </p>
-    <a href=""> Om Distortion</a>
-     <a href=""> Om Distortion</a>
+    <a href="">  Distortion gruppe</a>
+     <a href=""> Persondata politik</a>
      
       </div>
 
      <div class="info_links">
-    <p> OM OS </p>
-    <a href=""> Om Distortion</a>
-     <a href=""> Om Distortion</a>
-      <a href=""> Om Distortion</a>
-           <a href=""> Om Distortion</a>
+    <p> KONTAKT OS </p>
+    <a href=""> Distortion@mail.com</a>
+     <a href=""> Østerbro/Vesterbro/Nørrebro</a>
+      <a href="">Presse</a>
+           <a href=""> job & Praktik</a>
       </div>
 
-      <div>
+      <div class="svg_images">
         <img src="instagram.svg" alt="">
         <img src="youtube.svg" alt="">
           <img src="spotify.svg" alt="">
@@ -45,9 +45,35 @@
         .info_links{
             display: flex;
             flex-direction: column;
+            font-family: Roboto;
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 400;
+            line-height: normal;
+        }
+
+        .info_links a{
+            color: #000;
+            text-decoration: none;
         }
         
         img{
             height: 25px;
+            width: 20px;
+            padding top: 2rem;
+        }
+
+.svg_images{
+    padding-top: 2rem;
+}
+        p{
+           display: flex;
+            flex-direction: column;
+            color: #000;
+            font-family: Roboto;
+            font-size: 10px;
+            font-style: normal;
+            font-weight: 700;
+            line-height: normal; 
         }
     </style>
