--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import Header from "../components/Header.astro";
 import Navigation from "../components/Navigation.astro";
 ---
 
@@ -12,7 +13,7 @@ import Navigation from "../components/Navigation.astro";
     <title>Astro</title>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <slot />
   </body>
 </html>
