rettet index indhold

--- a/src/components/Ticket_card.astro
+++ b/src/components/Ticket_card.astro
@@ -54,7 +54,8 @@ section{
     align-items: center;
     gap: 8px;
     border-radius: 24px;
-    border: 2px solid #FFF;
+    border: 2px solid;
+    background-color: transparent;
   }
 
 </style>
