--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -61,6 +61,7 @@
             height: 25px;
             width: 20px;
             padding top: 2rem;
+            display:inline;
         }
 
 .svg_images{
