rettet index_laura

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import Footer from "../components/Footer.astro";
   <img src="images/tegning.svg" alt="index_tegning">
   <div class="hero_text">
   <h1>Distortion</h1>
-  <p>4 -8 JUNE 25</p>
+  <p>4 - 8 JUNE 2025</p>
   </div>
   </div>
   <h2> TICKETS</h2>
