--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -77,4 +77,22 @@
             font-weight: 700;
             line-height: normal; 
         }
+@media (min-width: 768px) {
+    footer {
+      flex-direction: row;
+    }
+
+    .info_links {
+      font-size: 16px;
+    }
+
+    .info_links p {
+      font-size: 18px;
+    }
+
+    .svg_images img {
+      height: 35px;
+      width: 35px;
+    }
+  }
     </style>
