--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -2,6 +2,7 @@
 import "../styles/global.css";
 import Header from "../components/Header.astro";
 import Navigation from "../components/Navigation.astro";
+import Footer from "../components/Footer.astro";
 ---
 
 <html lang="en">
@@ -21,6 +22,7 @@ import Navigation from "../components/Navigation.astro";
   <body>
     <Header />
     <slot />
+    <Footer></Footer>
   </body>
 </html>
 
