--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -16,8 +16,8 @@ import Footer from "../components/Footer.astro";
   <h2> TICKETS</h2>
   <Ticket_card title="FESTIVAL PASS" price="950 DKK"></Ticket_card>
   <Ticket_card title="Ø WEEKEND TICKET" price="750 DKK"></Ticket_card>
-  <Footer>
-  </Footer>
+  <!-- <Footer>
+  </Footer> -->
 </MainLayout>
 
 <style>
