--- a/src/pages/lineup.astro
+++ b/src/pages/lineup.astro
@@ -1,41 +1,92 @@
 ---
+import Card from "../components/Card.astro";
 import MainLayout from "../layouts/MainLayout.astro";
+import Footer from "../components/Footer.astro";
 // import Card
 
 const url = "https://trjrkakdlpavygfthheg.supabase.co/rest/v1/distortion-artists";
-const apiKey =
-  "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRyanJrYWtkbHBhdnlnZnRoaGVnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjk1ODUyMTQsImV4cCI6MjA0NTE2MTIxNH0.h1EudiiVkfsh6YijqS_2OGDOm8qknymy7mSWQ6bcmk0";
-
-let data = [];
-
-// prøver at hente data fra apiUrl og apiKey
-try {
-  const response = await fetch(url, {
-    method: "GET",
-    headers: {
-      apikey: apiKey,
-    },
-  });
-
-  console.log("Response status:", response.status); // Tjekker status på response
-
-  data = await response.json(); // konverterer response til json og lagrer i variabel "data"
-
-  console.log("Fetched data:", data); // Laver en console.log på fetched data
-
-  if (!Array.isArray(data)) {
-    throw new Error("Fetched data is not an array");
+const apiKey = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InRyanJrYWtkbHBhdnlnZnRoaGVnIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mjk1ODUyMTQsImV4cCI6MjA0NTE2MTIxNH0.h1EudiiVkfsh6YijqS_2OGDOm8qknymy7mSWQ6bcmk0";
+const data = await fetch(url, {
+  headers: {
+    apikey: apiKey
   }
-} catch (error) {
-  console.error("Error fetching or processing data:", error);
-  data = []; // Sørger for at datan er en tom array, hvis der sker fejl (error)
-}
+}).then(res=>res.json())
 ---
 
 <MainLayout>
-  <h1>Line Up</h1>
+  <div class="subheader">
+    <h1>Line Up</h1> 
+    .
+    <p>Distortion 2025</p>
+    <h2>4 - 8 June</h2>
+  </div>
+  
+  <div class="dates">
+    <a href="#wed">Wednesday 4/6</a>
+    <a href="#thu">Thursday 5/6</a>
+    <a href="#fri">Friday 6/6</a>
+    <a href="#sat">Saturday 7/6</a>
+  </div>
+  
 
-  <!-- <section class="lineup">
-    {data.length > 0 ? data.map((title) => <Card id={title.id} images={title.image} />)}
-  </section> -->
+  <h2 id="wed">Wednesday 4/6</h2>
+  <section class="lineup">
+    {
+      data.map((artist) => <Card data={artist} />)
+    }
+  </section>
+
+  <h2 id="thu">Thursday 5/6</h2>
+  <section class="lineup">
+    {
+      data.map((artist) => <Card data={artist} />)
+    }
+  </section>  
+
+  <h2 id="fri">Friday 6/6</h2>
+  <section class="lineup">
+    {
+      data.map((artist) => <Card data={artist} />)
+    }
+  </section>
+
+  <h2 id="sat">Saturday 7/6</h2>
+  <section class="lineup">
+    {
+      data.map((artist) => <Card data={artist} />)
+    }
+  </section>
+
+  <Footer>
+  </Footer>
 </MainLayout>
+
+<style>
+  *{
+    color: white;
+  }
+  h1{
+    margin: auto;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: sans-serif;
+  }
+  .dates{
+    display:flex;
+    flex-wrap: wrap;
+    gap: 10px;
+    justify-content: center;
+  }
+  .dates a, .dates a:visited{
+    color:white;
+    font-family: sans-serif;
+    text-align: center;
+    text-decoration: none;
+    max-width: ;
+    padding: 12px 15px;
+
+    border: solid white 3px;
+    border-radius: 50px;
+    width: 120px;
+  }
+</style>
