single view lavet

--- a/src/components/Buttons.astro
+++ b/src/components/Buttons.astro
@@ -24,8 +24,9 @@ const { variant, size } = Astro.props;
   [data-size="sm"] {
     font-size: 1rem;
   }
-  [data-size="lg"] {
-    font-size: 1.5rem;
+  [data-size="Back"] {
+    font-size: 1rem;
     padding: 2rem;
+    margin-top: 70px;
   }
 </style>
